--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,5 +1,6 @@
-.para,
-.small-para {
+.small-para,
+.para
+ {
   color: hsl(0, 100%, 50%);
 }
 
@@ -11,7 +12,7 @@
   font-size: 22px;
 }
 
-.confirm {
+.button.confirm {
   background: green;
   color: white;
   font-weight: bold;
@@ -23,7 +24,7 @@
   font-size: 20px;
 }
 
-.child {
+.text > .child {
   color: red;
   font-size: 14px;
 }
